[tool.poetry]
name = "qsbi-utils"
version = "0.1.0"
description = ""
authors = ["giacinti <philippe@giacinti.com>"]
readme = "README.md"
packages = [{include = "qsbi"}]

[tool.poetry.dependencies]
python = "^3.9"
qsbi-project = {path = "..", develop = true}
qsbi-backend-sql = {path = "../qsbi.backend.sql", develop = true}
SQLAlchemy = "^1.4.41"
click = "^8.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
